<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="p8project.sw801.ui.Settings.AddGlobalMuteSetting.AddGlobalMuteSettingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="p8project.sw801.ui.Settings.AddGlobalMuteSetting.AddGlobalMuteSettingViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/globalmutepage">


        <TextView
            android:id="@+id/textViewCreateGlobalMute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Create global mute"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewGlobalMuteName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:text="Global mute name:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreateGlobalMute" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGlobalMuteName">

            <EditText
                android:id="@+id/textInputGlobalMuteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give your global mute a name"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:text="@={viewModel.globulMuteName}" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewBetween"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Between time:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/editTextTimeBetween2"
            android:layout_width="0dp"
            android:layout_height="61dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTimeBetween"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBetween">

            <p8project.sw801.ui.custom.TimePicker.TimePicker
                android:id="@+id/setStartTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                app:currentTime="@={viewModel.startTime}" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/editTextTimeBetween"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTimeBetween2"
            app:layout_constraintTop_toBottomOf="@+id/textViewBetween">

            <p8project.sw801.ui.custom.TimePicker.TimePicker
                android:id="@+id/setEndTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:currentTime="@={viewModel.endTime}" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textViewComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Comment:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTimeBetween" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/edit_text_background"
            android:gravity="top|left"
            android:hint="Enter comment here"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5"
            android:padding="5dp"
            android:text="@={viewModel.comment}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewComment" />

        <Button
            android:id="@+id/buttonCreateGlobalMute"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:onClick="closeAddGlobalMute"
            android:text="Cancel"
            android:theme="@style/CustomStyleButton"
            app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextComment" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.submitGlobalMuteClick()}"
            android:text="Create global mute"
            android:theme="@style/CustomStyleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCreateGlobalMute"
            app:layout_constraintTop_toBottomOf="@+id/editTextComment" />

    </android.support.constraint.ConstraintLayout>

</layout>
